Fix input color changing when using chrome autofill

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,3 +1,8 @@
 @tailwind base;
 @tailwind utilities;
 @tailwind components;
+
+input:-webkit-autofill,
+  input:-webkit-autofill:focus {
+    transition: background-color 4000s 4000s, color 4000s 4000s;
+  }
